# ruviz

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GPU_IMPLEMENTATION_SUMMARY.md  INTERACTIVE_PLOTTING_PLAN.md  Makefile  README.md  TESTING_GUIDE.md  lefthook.yml  package.json  performance_data.csv  rustfmt.toml
.cargo/: audit.toml
.claude/: .superclaude-metadata.json  CLAUDE.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  implementation_status.md  phase4_performance_plan.md  project_overview.md  suggested_commands.md  test_summary.md
benches/: baseline_benchmarks.rs  memory_benchmarks.rs  memory_performance.rs  memory_pool_benchmarks.rs  performance.rs  plot_traits.rs  simple_memory_benchmark.rs
benchmarks/interactive/: run.py  scenarios.json  wasm_runner.mjs
benchmarks/plotting/: common.py  compare.py  python_runner.py  report.py  run.py  run_rust_features.py  rust_feature_report.py  scenarios.json  wasm_runner.mjs
claudedocs/: font_rendering_analysis.md  font_rendering_research.md  gpu_acceleration_design.md  memory_pool_performance_analysis.md  memory_pool_plan.md  scientific_plotting_improvement_plan.md
crates/ruviz-gpui/: Cargo.toml  README.md
crates/ruviz-gpui/examples/: coordinate_events.rs  fixed_bounds_dashboard.rs  movable_annotation.rs  observable_embed.rs  static_embed.rs  streaming_embed.rs
crates/ruviz-gpui/examples/support/: mod.rs
crates/ruviz-gpui/src/: lib.rs
crates/ruviz-gpui/src/platform_impl/: interaction.rs  presentation.rs
crates/ruviz-gpui/src/supported/: interaction.rs
crates/ruviz-web/: Cargo.toml  LICENSE  README.md
crates/ruviz-web/src/: lib.rs
demo/web/: bench-interactive.html  bench-plotting.html  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  BUILD_OUTPUTS.md  MATPLOTLIB_STYLING_RESEARCH.md  OPTIMIZATION_FINDINGS.md  PERFORMANCE_GUIDE.md  PROPERTY_TEST_RESULTS.md  QUICKSTART.md  TROUBLESHOOTING.md  animation_api_improvements.md  animation_migration_guide.md  gpu_alignment_bug_fixes.md  legend_api_design.md
docs/benchmarks/: large-dataset-plotting.md  rust-feature-impact.md
docs/gallery/: README.md  STYLING_COMPARISON.md
docs/guide/: 01_introduction.md  02_installation.md  03_first_plot.md  04_plot_types.md  05_styling.md  06_subplots.md  07_backends.md  08_performance.md  09_data_integration.md  10_export.md  11_advanced.md  README.md
docs/migration/: matplotlib.md  seaborn.md
examples/: animation_basic.rs  animation_easing.rs  animation_reactive.rs  animation_simple.rs  animation_wave.rs  annotations_example.rs  axis_legend_test.rs  axis_scales_example.rs  basic_example.rs  basic_interaction.rs  boxplot_example.rs  cosmic_text_rotation_demo.rs  create_performance_plot.rs  data_brushing.rs  debug_bar_chart.rs  doc_bar_chart.rs  doc_boxplot.rs  doc_colors.rs  doc_contour.rs  doc_ecdf.rs  doc_errorbar.rs  doc_heatmap.rs  doc_histogram.rs  doc_international.rs  doc_kde.rs  doc_legend.rs  doc_legend_positions.rs  doc_line_plot.rs  doc_line_styles.rs  doc_marker_styles.rs  doc_pie.rs  doc_polar.rs  doc_radar.rs  doc_scatter_plot.rs  doc_subplots.rs  doc_themes.rs  doc_typst_text.rs  doc_violin.rs  ecosystem_data_integration_demo.rs  fixes_demo.rs  (+51 more)
gallery/: README.md
plans/: 00_MASTER_ROADMAP.md  01_documentation_onboarding_strategy.md  02_testing_qa_strategy.md  03_performance_roadmap.md  04_api_backend_simplification.md  improvement_plan.md  small_dataset_optimization_implementation.md  week_4_completion_plan.md  week_4_visual_gallery_plan.md  week_5_api_simplification_plan.md  week_6_performance_validation_plan.md  week_7_performance_optimization_plan.md  week_8_quality_polish_plan.md
python/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
python/docs/: api.md  gallery.md  getting-started.md  index.md  interactive.md
python/docs/stylesheets/: extra.css
python/examples/: README.md  _shared.py  bar.py  boxplot.py  console_interactive.py  contour.py  dataframe_line.py  ecdf.py  error_bars.py  error_bars_xy.py  heatmap.py  histogram.py  kde.py  line.py  notebook_export.py  notebook_observable.py  notebook_widget_ratio.py  observable_math.py  pie.py  polar_line.py  radar.py  scatter.py  template_copy.py  violin.py
python/python/ruviz/: _api.py  widget.entry.js  widget.js
python/ruviz_py/ruviz/: __init__.py  _api.py  _widget.py
python/scripts/: build_widget.ts  build_widget_bundle.ts  generate_gallery.py
python/src/: lib.rs  native_handle.rs
python/tests/: test_api.py  test_examples.py
scripts/: check_docs.py  check_no_generated_asset_refs.py  check_no_new_production_unwraps.py  clean-outputs.sh  generate-doc-images.sh  generate_gallery.rs  generate_output_manifest.py  generate_reference.py  setup-git-hooks.sh  test_check_docs.py  test_verify_packaged_crates.py  test_wait_for_github_checks.py  verify_packaged_crates.py  wait_for_github_checks.py
src/: lib.rs  simple.rs
tests/: CONTRACT_TEST_SUMMARY.md  auto_optimization_test.rs  backend_parity_test.rs  color_palette_tests.rs  data_format_compatibility_test.rs  datashader_basic_test.rs  dpi_api_test.rs  dpi_scaling_test.rs  dpi_scaling_tests.rs  dpi_typography_scaling_test.rs  ecosystem_data_integration_test.rs  export_format_tests.rs  export_tests_fixed.rs  full_pipeline_test.rs  gallery_generator_test.rs  gallery_structure_test.rs  gallery_visual_test.rs  gpu_backend_test.rs  interactive_tests.rs  international_text_tests.rs  line_style_tests.rs  memory_pool_tests.rs  mixed_coordinate_visual_test.rs  nonbreaking_plot_api_test.rs  parallel_rendering_test.rs  pdf_export_test.rs  performance_validation.rs  property_tests.proptest-regressions  property_tests.rs  runtime_hardening_test.rs  scatter_plot_tests.rs  simple_api_test.rs  small_dataset_optimization_test.rs  tick_system_tests.rs  typst_feature_gate_ui.rs  visual_output_tests.rs  visual_output_tests_fixed.rs  visual_regression_test.rs  visual_traits_test.rs
(+336 files in other folders)
