[package]
name = "ruviz-py"
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pollster = "0.4"
pyo3 = { version = "0.24", features = ["abi3-py310"] }
ruviz = { path = "..", version = "0.3.2", default-features = false, features = ["interactive", "pdf", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
