[package]
name = "ruviz-py"
version = "0.4.10"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Python bindings and notebook widget support for ruviz"
repository = "https://github.com/Ameyanagi/ruviz"
readme = "README.md"
publish = false

[features]
default = ["native-interactive"]
native-interactive = ["ruviz/interactive"]

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pollster = "0.4"
pyo3 = { version = "0.24", features = ["abi3-py310"] }
ruviz = { path = "..", version = "0.4.10", default-features = false, features = ["pdf", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
