[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "ruviz"
version = "0.4.8"
description = "Python bindings and notebook widget support for ruviz"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Ruviz Contributors" }]
dependencies = [
  "anywidget>=0.9",
  "numpy>=2.0",
  "traitlets>=5.14",
]

[project.optional-dependencies]
dataframes = [
  "pandas>=2.2",
  "polars>=1.0",
]
pandas = [
  "pandas>=2.2",
]
polars = [
  "polars>=1.0",
]

[dependency-groups]
dev = [
  "ipykernel>=6.0",
  "maturin>=1.8,<2.0",
  "mkdocs-material>=9.6",
  "mkdocs>=1.6",
  "mkdocstrings[python]>=0.30",
  "pandas>=2.2",
  "polars>=1.0",
  "pytest>=8.0",
  "ruff>=0.12",
]
bench = [
  "matplotlib>=3.10",
]

[tool.maturin]
python-source = "ruviz_py"
module-name = "ruviz._native"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py310"
