[package]
name = "ruviz-gpui"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "GPUI component adapter for ruviz"
repository = "https://github.com/Ameyanagi/ruviz"

[features]
default = []
gpu = ["ruviz/gpu"]

[dependencies]
ruviz = { version = "0.1.5", path = "../.." }
image = "0.25"
smallvec = "1.15"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
core-foundation = "0.10"
core-video = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
gpui = "0.2.2"
