[package]
name = "ruviz-gpui"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "GPUI component adapter for ruviz"
repository = "https://github.com/Ameyanagi/ruviz"

[features]
default = []
gpu = ["ruviz/gpu"]

[dependencies]
ruviz = { version = "0.1.5", path = "../.." }
image = "0.25"
smallvec = "1.15"
futures = "0.3"
arboard = "3.6.1"
rfd = "=0.15.4"

[target.'cfg(target_os = "macos")'.dependencies]
gpui = "0.2.2"
core-foundation = "0.10"
core-video = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
gpui = "0.2.2"

[dev-dependencies]
smol = "2"

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
# Keep this fork pin aligned with the workspace GPUI override until
# https://github.com/zed-industries/zed/issues/52643 is fixed upstream.
gpui_macos = { git = "https://github.com/Ameyanagi/zed", rev = "6e43ecd17f28afe6f55df34657cb9b21493d46b1", package = "gpui_macos", features = ["runtime_shaders"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
