[package]
name = "ruviz-gpui"
version = "0.4.7"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "GPUI component adapter for ruviz"
repository = "https://github.com/Ameyanagi/ruviz"
readme = "README.md"

[features]
default = []
gpu = ["ruviz/gpu"]

[dependencies]
ruviz = { version = "0.4.7", path = "../.." }
image = "0.25"
smallvec = "1.15"
futures = "0.3"
arboard = "3.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
gpui = "0.2.2"
core-foundation = "0.10"
core-video = "0.4"
rfd = { version = "=0.15.4", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gpui = "0.2.2"
rfd = { version = "=0.15.4", default-features = false, features = ["gtk3"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui = "0.2.2"
rfd = { version = "=0.15.4", default-features = false }

[dev-dependencies]
smol = "2"

[target.'cfg(target_os = "macos")'.dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
# Keep this pin aligned with the workspace GPUI override until crates.io ships
# the macOS right-drag fix from https://github.com/zed-industries/zed/pull/49637.
gpui_macos = { git = "https://github.com/zed-industries/zed", rev = "3060e4170ea5ef0e6886b9ac1853aaead9ddd59f", package = "gpui_macos", features = ["runtime_shaders"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "3060e4170ea5ef0e6886b9ac1853aaead9ddd59f", features = ["wayland", "x11"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "3060e4170ea5ef0e6886b9ac1853aaead9ddd59f" }
