[package]
name = "ruviz-web"
version = "0.4.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Browser runtime adapter for ruviz"
repository = "https://github.com/Ameyanagi/ruviz"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ruviz = { version = "0.4.0", path = "../..", default-features = false }
js-sys = "0.3.92"
wasm-bindgen = "0.2.105"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.92"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
]
